--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/swaproj?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 1986
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+server.port=8086
+spring.datasource.url=jdbc:mysql://localhost:3305/swaproj
+#spring.datasource.url=jdbc:mysql://docker-mysql/swaproj
+spring.datasource.username=root
+spring.datasource.password=1986
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql =  true
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto= update
 spring.batch.jdbc.initialize-schema = ALWAYS
 
@@ -10,5 +14,6 @@ spring.batch.jdbc.initialize-schema = ALWAYS
 springbatchpro.app.jwtSecret= barnasecretkey
 springbatchpro.app.jwtExpirationMs= 86400000
 
-spring.batch.job.enabled=false
 input=file:sample.csv
+
+spring.batch.job.enabled=false
